# Cxx-Example-Project

./: CMakeLists.txt  config.json  find_root.cxx  function_input.cxx  function_input.h
root_finding/: CMakeLists.txt  root_finding.cxx  root_finding.h
